<resources>
    <string name="app_name">Movies Manager</string>

    <string name="name">Nome</string>
    <string name="year">Ano</string>
    <string name="studio">Estúdio</string>
    <string name="producer">Produtora</string>
    <string name="madeBy">Feito por</string>
    <string name="duration">Duração</string>
    <string name="watched">Assistido</string>
    <string name="rating">Avaliação</string>
    <string name="genre">Gênero</string>

    <string name="not_watched">Não assistido</string>

    <string name="minutes">%1$dm</string>
    <string name="hours">%1$dh</string>

    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="cancel">Cancelar</string>

    <string name="add_movie">Adicionar Filme</string>
    <string name="save_movie">Salvar Filme</string>
    <string name="edit_movie">Editar Filme</string>
    <string name="remove_movie">Remover Filme</string>
    <string name="delete_movie">Deletar Filme</string>
    <string name="order_by_name">Ordenar por Nome</string>
    <string name="order_by_rating">Ordenar por Avaliação</string>

    <string name="add_genre">Adicionar Gênero</string>
    <string name="save_genre">Salvar Gênero</string>
    <string name="edit_genre">Editar Gênero</string>
    <string name="edit_genres">Editar Gêneros</string>
    <string name="remove_genre">Remover Gênero</string>
    <string name="delete_genre">Deletar Gênero</string>

    <string name="genres">Gêneros</string>
    <string name="genre_name">Nome do Gênero</string>

    <string name="empty_name_toast">O nome não pode ser vazio</string>
    <string name="empty_year_toast">O ano não pode ser vazio</string>
    <string name="empty_made_by_toast">O estúdio/produtora não pode ser vazio</string>
    <string name="empty_duration_toast">A duração não pode ser vazio</string>
    <string name="empty_genre_toast">O genero não pode ser vazio</string>
</resources>